--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Clean Blog
 header-img: img/home-bg.jpg
 email: your-email@yourdomain.com
 description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/cmrberry.github.io"
+baseurl: ""
 url: "http://rachelberry.me"
 twitter_username: SBootstrap
 github_username:  davidtmiller
