Fix URL :unamused:

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Rachel Berry
 header-img: img/home-bg.jpg
 description: "Rachel Berry"
 baseurl: ""
-url: "http://rachelberry.me"
+url: "http://cmrberry.com"
 twitter_username: cmrberry
 github_username:  cmrberry
 
