--- a/_config.yml
+++ b/_config.yml
@@ -14,22 +14,20 @@ sass:
 
 # SEO settings
 title: Rachel Berry
-description: "A free Jekyll theme for download"
-keywords: "Jekyll, theme, free, download, SEO, blog, web"
+description: "Perpetual student of all things tech"
+keywords: "blog, jekyll, women in tech, engineer, github"
 url: http://cmrberry.com
 baseurl: ""
 
 # google_analytics: UA-52446115-1
 repo: http://github.com/cmrberry/cmrberry.github.io
-disqus_shortname: "nandothemes"
-disqus_site_shortname: "nandothemes"
 
 # Author settings
 author:
   name      : Rachel Berry
   job       : Analytics Engineer at GitHub
   bio       : "Perpetual student of all things tech. Driven by data and copious amounts of coffee. Proud wife, mom, and Jew."
-  thumb     : /images/author.jpg
+  thumb     : /img/author.jpg
   email     : cmrberry@gmail.com
   url       : http://cmrberry.com
   github    : http://github.com/cmrberry
