--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repo: http://github.com/cmrberry/cmrberry.github.io
 # Author settings
 author:
   name      : Rachel Berry
-  job       : Analytics Engineer at GitHub
+  job       : Technical Support Engineer at GitHub
   bio       : "Perpetual student of all things tech. Driven by data and copious amounts of coffee. Proud wife, mom, and Jew."
   thumb     : /img/author.jpg
   email     : cmrberry@gmail.com
